feat: set port 8080 to pix-api-java service

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -20,6 +20,8 @@ services:
   pix-api-java:
     build: ../services/pix-api-java
     depends_on: [postgres, kafka]
+    ports:
+      - "8080:8080"
 
   pix-api-node:
     build: ../services/pix-api-node
