--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       POSTGRES_DB: pix
       POSTGRES_USER: pix
       POSTGRES_PASSWORD: pix
+    ports:
+      - "5432:5432"
 
   mongo:
     image: mongo:6
