feat: add build maven dependences in Dockerfile step 1

--- a/services/pix-api-java/Dockerfile
+++ b/services/pix-api-java/Dockerfile
@@ -1,3 +1,10 @@
+# Etapa 1: build com Maven
+FROM maven:3.8.8-eclipse-temurin-17 AS build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
+# Etapa 2: imagem final para rodar o .jar
 FROM eclipse-temurin:17-jdk
 WORKDIR /app
 COPY target/*.jar app.jar
