feat: fixing steps in Dockerfile to execute maven build just when has new dependencies in pom.xml

--- a/services/pix-api-java/Dockerfile
+++ b/services/pix-api-java/Dockerfile
@@ -1,11 +1,19 @@
 # Etapa 1: build com Maven
 FROM maven:3.8.8-eclipse-temurin-17 AS build
 WORKDIR /app
+
+# Copie apenas o pom.xml e baixe as dependências
+COPY pom.xml .
+RUN mvn dependency:go-offline
+
+# Agora copie o restante do código
 COPY . .
+
+# Compile o projeto
 RUN mvn clean package -DskipTests
 
-# Etapa 2: imagem final para rodar o .jar
+# Etapa 2: imagem final
 FROM eclipse-temurin:17-jdk
 WORKDIR /app
-COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+COPY --from=build /app/target/*.jar app.jar
+ENTRYPOINT ["java", "-jar", "app.jar"]
