--- a/services/pix-api-java/src/main/resources/application.properties
+++ b/services/pix-api-java/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+logging.level.org.springframework=DEBUG
+logging.level.com.pix.bip=DEBUG
